# clj-ruff

./: .gitignore  LICENSE  README.md  build.clj  deps.edn
.github/workflows/: ci.yml  deploy.yml
native/ruff-c/: Cargo.toml
native/ruff-c/src/: lib.rs
scripts/: build-natives.sh
src/com/blockether/: ruff.clj
test/com/blockether/: ruff_test.clj
